// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when there are multiple items 1`] = `
Array [
  <span
    className="empty-message"
  >
    one
  </span>,
  <span
    className="empty-message"
  >
    two
  </span>,
  <span
    className="empty-message"
  >
    three
  </span>,
]
`;

exports[`renders correctly when there are no items 1`] = `
<span
  className="empty-message"
>
  No items in list
</span>
`;

exports[`renders correctly when there is a single item 1`] = `
<span
  className="empty-message"
>
  one
</span>
`;
